--- a/Homework_3.html
+++ b/Homework_3.html
@@ -15,8 +15,8 @@
 	<body>
 		<script>
 
-			//vaxInitParallax();
-			vaxInit();
+			vaxInitParallax();
+			//vaxInit();
 			camera.position.set(0, 0, 0 );
 			camera.add( light );
 			scene.add( camera );
