--- a/Homework_3.html
+++ b/Homework_3.html
@@ -17,13 +17,15 @@
 
 			vaxInitParallax();
 			//vaxInit();
+			light.intensity = 0.75;
 			camera.position.set(0, 0, 0 );
 			camera.add( light );
 			scene.add( camera );
 
 			var a = THREE.Math.degToRad(90);
 			var gama = THREE.Math.degToRad(-90);
-			camera.rotation.set(0, a, -gama, 'YXZ');
+			var beta = THREE.Math.degToRad( 0 )
+			camera.rotation.set(beta, a, -gama, 'YXZ');
 
 			var boxMaterial = new THREE.MeshPhongMaterial({color: '#ffd9b3'});
 			var boxGeometry = new THREE.BoxGeometry(30, 30, 30);
@@ -46,7 +48,7 @@
 				var material = new THREE.MeshLambertMaterial( {color: new THREE.Color().setHSL( 3*i/16, 1, 0.5 )} );
 				var cone = new THREE.Mesh( coneGeometry, material );
 				cone.position.set(Math.floor(Math.random() * (13.5 - -13.5) ) + -13.5, Math.floor(Math.random() * (13.5 - -13.5) ) + -13.5, Math.floor(Math.random() * (13.5 - -13.5) ) + -13.5);
-				//cone.rotation.z = -Math.PI/2;
+				//cone.rotation.x = -Math.PI/2;
 				cones.push(cone);
 				scene.add( cone );
 			}
@@ -58,7 +60,8 @@
 			{
 				a = THREE.Math.degToRad(event.alpha);
 				gama = THREE.Math.degToRad(event.gamma);
-				camera.rotation.set(gama, a, 0);
+				beta = THREE.Math.degToRad( event.beta )
+				camera.rotation.set(beta, a, -gama, 'YXZ');
 			}
 
 			function animate( t )
