--- a/Homework_3.html
+++ b/Homework_3.html
@@ -56,6 +56,7 @@
 			{
 				a = THREE.Math.degToRad(event.alpha);
 				gama = THREE.Math.degToRad(event.gamma);
+				//console.log(gama);
 				if(gama > 0)
 				{
 					group.rotation.set(0, THREE.Math.lerp( group.rotation.y, -a, k ), THREE.Math.lerp( group.rotation.z, gama, k ), 'YZX');
