--- a/Homework_3.html
+++ b/Homework_3.html
@@ -60,12 +60,15 @@
 				if(gama > 0)
 				{
 					a = THREE.Math.degToRad(event.alpha - 180);
+					gama = THREE.Math.degToRad(180 - event.gamma);
 					//console.log(a);
-					group.rotation.set(0, -THREE.Math.lerp( group.rotation.y, a, k ), -THREE.Math.lerp( group.rotation.z, -gama, k ), 'YZX');
+					//group.rotation.set(0, THREE.Math.lerp( group.rotation.y, a, k ), THREE.Math.lerp( group.rotation.z, gama, k ), 'YZX');
+					group.rotation.set(0, -a, gama, 'YZX');
 				}
 				else{
 					//console.log(a);
-					group.rotation.set(0, THREE.Math.lerp( group.rotation.y, -a, k ), THREE.Math.lerp( group.rotation.z, -gama, k ), 'YZX');
+					//group.rotation.set(0, THREE.Math.lerp( group.rotation.y, -a, k ), THREE.Math.lerp( group.rotation.z, -gama, k ), 'YZX');
+					group.rotation.set(0, -a, -gama, 'YZX');
 				}
 			}
 		</script>
