--- a/Homework_3 - Copy.html
+++ b/Homework_3 - Copy.html
@@ -60,8 +60,6 @@
 				if (typeof window.orientation === "number") return window.orientation;
 				return 0;
     		};
-			var k = 0.1;
-			var oldAlpha = 90, oldBeta = 0, oldGamma = -90;
 			function deviceOrientation( event )
 			{
 				var angle = getOrientation();
@@ -69,7 +67,6 @@
 				var beta = event.beta || 0;
 				var gamma = event.gamma || 0;
 				if (alpha === 0 && beta === 0 && gamma === 0) return;
-				
 				
 				// device rot axis order Z-X-Y as alpha, beta, gamma
 				// portrait mode Z=rear->front(screen), X=left->right, Y=near->far(cam)
@@ -82,14 +79,11 @@
 				}
 				var rotType = (angle === 0 || angle === 180) ? "YXZ" : "YZX";
 				var rotm = new THREE.Quaternion().setFromEuler(
-					new THREE.Euler(THREE.Math.lerp(oldBeta* d2r, beta * d2r, k), THREE.Math.lerp(oldAlpha * d2r, alpha * d2r, k), THREE.Math.lerp(oldGamma * d2r, -gamma * d2r, k), rotType));
+					new THREE.Euler(beta * d2r, alpha * d2r, -gamma * d2r, rotType));
 				var devm = new THREE.Quaternion().setFromEuler(
 					new THREE.Euler(0, -angle * d2r, 0));
 				rotm.multiply(devm).multiply(eyem);
-				camera.quaternion.copy(rotm);
-				oldAlpha = alpha;
-				oldBeta = beta;
-				oldGamma = -gamma;
+				camera.quaternion.slerp(rotm, 0.2);
 			}
 		</script>
 	</body>
