--- a/Homework_3.html
+++ b/Homework_3.html
@@ -49,7 +49,7 @@
 
 			window.addEventListener( "deviceorientation", deviceOrientation, true);
 
-			var k = 0.1;
+			var k = 0.3;
 			function deviceOrientation( event )
 			{
 				var alpha = event.alpha,
@@ -67,11 +67,11 @@
 									
 				alpha = THREE.Math.degToRad( alpha );
 				gamma = THREE.Math.degToRad( gamma );
-				var destination = new THREE.Vector3(gamma, alpha, 0);
-				destination.lerp(camera.rotation, k);
+				// var destination = new THREE.Vector3(gamma, alpha, 0);
+				// destination.lerp(camera.rotation, k);
 				
-				camera.rotation.set( destination.x, destination.y, destination.z, 'YXZ' );
-				//camera.rotation.set( THREE.Math.lerp(camera.rotation.x, gamma, k), THREE.Math.lerp(camera.rotation.y, alpha, k), 0, 'YXZ' );
+				// camera.rotation.set( destination.x, destination.y, destination.z, 'YXZ' );
+				camera.rotation.set( THREE.Math.lerp(camera.rotation.x, gamma, k), THREE.Math.lerp(camera.rotation.y, alpha, k), 0, 'YXZ' );
 			}
 		</script>
 	</body>
